--- a/chromograph/config_chromograph.yml
+++ b/chromograph/config_chromograph.yml
@@ -1,35 +1,29 @@
+---
 #
 # Chromograph Settings
 # ====================
 
 # General settings
-
-
-outdir: ""
-
-
-
 colors : "todo"
+roh_color: "todo"
 
 
-# ideogram, roh 
-chromosome_str : ['chr1', 'chr2', 'chr3', 'chr4', 'chr5', 'chr6', 'chr7',
-                  'chr8', 'chr9', 'chr10', 'chr11', 'chr12', 'chr13',
-                  'chr14' , 'chr15', 'chr16', 'chr17', 'chr18', 'chr19',
-                  'chr20', 'chr21', 'chr22', 'chrM', 'chrX', 'chrY']
-                   
+# ideogram, roh
+chromosome_str: ['chr1', 'chr2', 'chr3', 'chr4', 'chr5', 'chr6', 'chr7',
+                 'chr8', 'chr9', 'chr10', 'chr11', 'chr12', 'chr13',
+                 'chr14' , 'chr15', 'chr16', 'chr17', 'chr18', 'chr19',
+                 'chr20', 'chr21', 'chr22', 'chrM', 'chrX', 'chrY']
+
 
 # upd
-chromosome_int : ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
-                  '11', '12', '13', '14', '15', '16', '17', '18',
-                  '19', '20','21', '22', 'M', 'X', 'Y']
+chromosome_int: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
+                 '11', '12', '13', '14', '15', '16', '17', '18',
+                 '19', '20','21', '22', 'M', 'X', 'Y']
 
 
 # UPD specific settings
 
 # ROH specific settings
-wig_step: 5000   # 
-roh_color: "#e89f00" # orange
+wig_step: 5000
 
 # CYT specific settings
-
